# Hackathon_todo

./: .gitignore  CLAUDE.md  NEON_SETUP.md  PHASE2_README.md  PHASE2_RUN_INSTRUCTIONS.md  PHASE2_SUMMARY.md  PostgreSQL_SETUP.md  README.md  pyproject.toml  requirements.txt  start_backend.bat  start_frontend.bat  todo_app.db  verify_setup.ps1
.claude/skills/auth/: auth-setup.skill  permission-control.skill
.claude/skills/backend/: api-generator.skill  middleware-setup.skill
.claude/skills/database/: query-optimizer.skill  schema-design.skill
.claude/skills/frontend/: component-generator.skill  state-management.skill
.specify/memory/: constitution.md
backend/: =0.0.2  Dockerfile  README.md  app.py  app_main.py  debug_jwt.py  debug_test.py  init_db.py  main.py  pyproject.toml  requirements.txt  space.yaml  start_server.py  start_server_port8001.py  test_db_connection.py  test_hf_compatibility.py  test_main.py  todo_app.db
backend/scripts/: init_db.py
backend/src/: database.py  database_hf.py  main.py
backend/src/agent/: todo_agent.py
backend/src/api/: auth.py  chat.py  chatkit_endpoint.py  tasks.py
backend/src/chatkit/: __init__.py  server.py  store.py
backend/src/database/: __init__.py  async_utils.py  utils.py
backend/src/dependencies/: auth.py
backend/src/errors/: task_errors.py
backend/src/logging/: security_logging.py
backend/src/mcp/: __init__.py  server.py
backend/src/middleware/: auth.py  input_sanitization.py  rate_limit.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: auth_service.py  chat_service.py  task_service.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_chat_endpoint.py  test_chatkit_endpoint.py  test_conversation_model.py  test_mcp_server.py  test_models.py  test_security.py  test_tasks.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/add-task/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/home/: page.tsx
frontend/app/login/: page.tsx
frontend/app/root/: page.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  UserFriendlyError.tsx
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx
frontend/src/lib/: api.ts  chat-types.ts  task-validation.ts  validation.ts
history/adr/: 001-mcp-transport-stdio.md  001-python-313-uv-package-manager.md  002-auth-bridge-user-id-passthrough.md  002-dataclasses-for-task-entity.md  002-jwt-security-strategy.md  003-database-schema-ownership-pattern.md  003-in-memory-dictionary-storage.md  003-tool-schema-design.md  007-self-hosted-chatkit.md  008-chatkit-streaming-protocol.md  009-localstorage-conversation-persistence.md  README.md
history/prompts/001-console-todo-app/: 001-generate-console-todo-app-specification.spec.prompt.md  002-clarify-console-todo-app-specification.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  005-implement-console-todo-app.green.prompt.md
history/prompts/1-full-stack-todo-app/: 1-full-stack-todo-implement-phase2.red.prompt.md  1-full-stack-todo-implement-phase3.green.prompt.md  1-full-stack-todo-implement-phase4.green.prompt.md  (+4 more)
specs/001-console-todo-app/: plan.md  spec.md  tasks.md
specs/1-fix-login-error/: spec.md
specs/1-full-stack-todo-app/: spec.md  tasks.md
specs/1-mcp-server-todo-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-openai-agents-chat-interface/: plan.md  spec.md  tasks.md
specs/3-chatkit-ui-final-validation/: plan.md  spec.md  tasks.md
specs/phase1-console/: plan.md  spec.md  tasks.md
src/: __init__.py  main.py
src/cli/: display.py  menu.py
src/core/: models.py  task_manager.py
src/models/: task.py
src/services/: __init__.py  task_manager.py
src/utils/: formatters.py  validators.py
tests/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_task.py  test_task_manager.py
(+33 files in other folders)
